fixup: Fix ticker height on mobile

--- a/client/src/pages/Flow/Flow.module.scss
+++ b/client/src/pages/Flow/Flow.module.scss
@@ -241,7 +241,7 @@
   padding: 0.25rem 0.5rem;
   font-size: 16px;
   width: 4rem;
-  height: 2.5rem;
+  height: 2rem;
   border-radius: 15px;
   cursor: pointer;
   @extend %center-children;
